--- a/src/styles/css/pages/index.scss
+++ b/src/styles/css/pages/index.scss
@@ -125,9 +125,11 @@
             margin-bottom: 2.5rem;
         }
         .item {
+            --borderRadius: 3rem;
             background-color: #fff;
-            border-radius: 0 3rem 0 0 ;
+            border-top-right-radius: var(--borderRadius);
             padding: 4rem 2.5rem;
+            position: relative;
             &-title {
                 font-size: 1.6rem;
                 letter-spacing: 0.36px;
@@ -138,6 +140,27 @@
                 padding: 7px 15px;
                 border-width: 1px;
                 font-size: 1.3rem;
+            }
+            &:after {
+                content: "";
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                display: block;
+                border-top-right-radius: var(--borderRadius);
+                opacity: 0;
+                box-shadow: inset 0 0 0 2px #0071b8;
+                transition: opacity .3s cubic-bezier(.25,.46,.45,.94), transform 350ms cubic-bezier(.25,.46,.45,.94);
+                transform: scale(1.05);
+                pointer-events: none;
+            }
+            &:hover {
+                &:after {
+                    opacity: .5;
+                    transform: scale(1)
+                }
             }
         }
         @include mq(md, 'max') {
@@ -192,9 +215,14 @@
         }
     }
     @include mq(md, 'max') {
-        .section-wrapper {
-            padding-left: 0;
-            padding-right: 0;
+        .section {
+            &-wrapper {
+                padding-left: 0;
+                padding-right: 0;
+            }
+            &-content {
+                line-height: 1.6;
+            }
         }
     }
 }
@@ -239,9 +267,14 @@
         }
     }
     @include mq(md, 'max') {
-        .section-wrapper {
-            padding-left: 0;
-            padding-right: 0;
+        .section {
+            &-wrapper {
+                padding-left: 0;
+                padding-right: 0;
+            }
+            &-content {
+                line-height: 1.6;
+            }
         }
     }
 }
