--- a/src/styles/css/components/_item-blog.scss
+++ b/src/styles/css/components/_item-blog.scss
@@ -21,7 +21,10 @@
 
 // Default
 .post {
-    &-media {}
+    &-media {
+        border-radius: 0 6.5rem 0 0;
+        overflow: hidden;
+    }
     &-details {}
     &-label {
         &-group {}
@@ -32,7 +35,7 @@
     }
     &-cat {}
     &-title {
-        font-size: 1.6rem;
+        font-size: 2rem;
         line-height: 1.3;
     }
     &-content {
@@ -40,16 +43,13 @@
     &-post-meta {
         a {}
     }
-    &-item {
-        border-bottom: 1px solid #232628;
-    }
 }
 /*#region Mobile responsive section styles*/
 @include mq(xl, 'max') {}
 @include mq(lg) {
     .post-item {
         .post-title  {
-            @include overtext($row: 2, $h: 41px);
+            @include overtext($row: 2, $h: 50px);
         }
         .post-content  {
             @include overtext($row: 4, $h: 90px);
