--- a/src/styles/css/base/header/_header.scss
+++ b/src/styles/css/base/header/_header.scss
@@ -55,12 +55,12 @@
 		}
 		.btn {
 			padding: 1rem 2.5rem;
+			min-width: auto;
 		}
 		.logo-wrapper {
 			transform: translateY(-3px);
 		}
 		&.fixed {
-			background-color: #fff;
 		}
 	}
 	
